	w3m-charset-coding-system-alist, w3m-url-local-directory-alist,
	w3m-pop-up-frame-parameters): Improve the customizing widgets.

2003-07-25  Hideyuki SHIRAI  <shirai@meadowy.org>

	* shimbun/sb-tdiary.el (shimbun-tdiary-content-start): Change value.
	(shimbun-tdiary-footnote-regex): New internal variable.
	(shimbun-make-contents): Keep subtitle in body. Handle footnotes.

2003-07-23  Katsumi Yamaoka  <yamaoka@jpl.org>

	* w3mhack.el (w3mhack-makeinfo): Force texinfmt.elc to load
	texinfo.elc from the correct place.  <cf. [emacs-w3m:05573]>

2003-07-22  Katsumi Yamaoka  <yamaoka@jpl.org>

	* shimbun/sb-mainichi.el (shimbun-get-headers): Convert CRLF to LF.
	(shimbun-make-contents): Convert CRLF to LF instead of removing CR.

2003-07-18  TSUCHIYA Masatoshi  <tsuchiya@namazu.org>

	* w3m.el (emacs-w3m-version): Release 1.3.6.

2003-07-17  Katsumi Yamaoka  <yamaoka@jpl.org>

	* shimbun/sb-mainichi.el (shimbun-mainichi-content-start):
	Simplify.
	(shimbun-mainichi-content-end): Ditto.
	(shimbun-make-contents): Remove ^M's, table forms and adv's.

2003-07-16  Katsumi Yamaoka  <yamaoka@jpl.org>

	* w3m.el (w3m-uri-replace-alist): Improve the customizing widget.

2003-07-16  TSUCHIYA Masatoshi  <tsuchiya@namazu.org>

	* Merge changes of SHIMBUN backends on main trunk.

2003-07-16  Katsumi Yamaoka  <yamaoka@jpl.org>

	* shimbun/sb-mainichi.el (shimbun-mainichi-content-start): Improve
	the value.
	(shimbun-mainichi-content-end): Ditto.

2003-07-15  TSUCHIYA Masatoshi  <tsuchiya@namazu.org>

	* w3m.el (w3m-goto-url): Do not encode a given URL when it points
	a local page.  Bind `w3m-current-buffer' locally.
	(w3m-copy-buffer): Wrap `w3m-goto-url' with
	`w3m-process-with-wait-handler', to avoid unexpected asynchronous
	processes.
	(w3m-region): Bind `w3m-current-buffer' locally.

2003-07-12  NOMIYA Masaru  <nomiya@ttmy.ne.jp>

	* shimbun/sb-zdnet.el (shimbun-zdnet-group-alist): Fix the folder
	name for `enterprise'.
