@@ -74,7 +74,7 @@ URL is the URL for TDIARY access point of the group.")
 (defmacro shimbun-tdiary-get-headers (shimbun url headers &optional aux)
   (` (let ((case-fold-search t))
        (goto-char (point-max))
-       (while (re-search-backward "<h3[^>]*><a href=\"\./\\(.*\\([0-9][0-9][0-9][0-9]\\)\\([0-9][0-9]\\)\\([0-9][0-9]\\).*#\\(p[0-9]+\\)\\)\"><span class=\"[ps]anchor\">.+</span></a>\\(.+]\\|\\) \\(.+\\)</h3>" nil t)
+       (while (re-search-backward "<h3[^>]*><a href=\"\./\\(.*\\([0-9][0-9][0-9][0-9]\\)\\([0-9][0-9]\\)\\([0-9][0-9]\\).*#\\(p[0-9]+\\)\\)\"><span class=\"[ps]anchor\">.+</span></a>\\(.+]\\|\\) *\\(.+\\)</h3>" nil t)
 	 (let ((url (match-string 1))
 	       (year (match-string 2))
 	       (month (match-string 3))
@@ -143,6 +143,9 @@ URL is the URL for TDIARY access point of the group.")
     (dolist (month months)
       (let ((url (concat (shimbun-index-url shimbun) "?date=" month)))
 	(shimbun-retrieve-url url t)
+	(goto-char (point-min))
+	(while (search-forward "\r" nil t)
+	  (delete-char -1))
 	(shimbun-tdiary-get-headers shimbun url headers author)))
     headers))
 
