@@ -10,6 +10,8 @@
 	* shimbun/sb-tdiary.el (shimbun-tdiary-content-start): Change value.
 	(shimbun-tdiary-footnote-regex): New internal variable.
 	(shimbun-make-contents): Keep subtitle in body. Handle footnotes.
+	(shimbun-tdiary-get-headers): Change regexp of headers.
+	(shimbun-get-headers): Remove `\r' from buffer.
 
 2003-07-23  Katsumi Yamaoka  <yamaoka@jpl.org>
 
